--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "backend",
+  "name": "heritage-haven-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for the Heritage Haven project, featuring a personalized recommendation system.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "mern",
+    "recommendation-system",
+    "mongodb",
+    "express"
+  ],
+  "author": "Your Team Name",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "env": "^0.0.2",
-    "express": "^5.1.0",
-    "mongoose": "^8.19.0",
-    "natural": "^8.1.0"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "natural": "^6.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
