--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "anymatch": "^3.1.3",
     "apparatus": "^0.0.10",
     "array-flatten": "^1.1.1",
+    "axios": "^1.12.2",
     "balanced-match": "^1.0.2",
     "bcryptjs": "^2.4.3",
     "binary-extensions": "^2.3.0",
